[package]
name = "accelerate"
version = "2.0.0"
description = "Accelerate your databases back and forth through easy to manage migration files."
homepage = "https://github.com/calebmer/accelerate"
repository = "https://github.com/calebmer/accelerate.git"
readme = "README.md"
license = "MIT"
keywords = ["database", "migrate", "sql", "postgres"]
authors = ["Caleb Meredith <calebmeredith8@gmail.com>"]
include = ["src/**/*.rs", "Cargo.toml", "README.md"]

[[bin]]
name = "accelerate"

[[test]]
name = "tests"

[features]
default = ["driver-test", "driver-postgres"]
driver-test = []
driver-postgres = ["postgres"]

[dependencies]
clap = { version = "2.5", features = ["color", "suggestions"] }
colored = "1.2"
postgres = { version = "0.11", optional = true }
regex = "0.1"
